@@ -2,16 +2,16 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-beta
-pkgver=3.1.1_ooo310_m15 # m9=RC1
+pkgver=3.1.1_ooo310_m17 # m9=RC1
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
-_OO_milestone=OOO310_m15
+_OO_milestone=OOO310_m17
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
-depends=('curl>=7.19.2' 'hunspell>=1.2.8' 'python>=2.6.2' 'libwpd' 'redland'
-         'libxaw' 'neon>=0.28.4' 'dbus-glib' 'icu>=4.2.1' 'hsqldb-java' 'libxslt' 'desktop-file-utils')
+depends=('curl>=7.19.2' 'hunspell>=1.2.8' 'python>=2.6.2' 'libwpd' 'redland' 'libxaw' 'neon>=0.28.4' 
+         'dbus-glib' 'icu>=4.2.1' 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils')
 optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
@@ -20,9 +20,10 @@ optdepends=('java-runtime:	adds java support'
 makedepends=('bison' 'svn' 'automake' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl' 'libxtst'
              'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' 'xulrunner>=1.9.1-2'
              'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'pstoedit' 'gconf' 'openjdk6>=1.5-4') #'boost' 
+backup=(usr/lib/openoffice-beta/program/sofficerc )
 provides=('openoffice-base')
 source=(${pkgname}-${_OO_milestone}.tar.gz
-	template.desktop
+	startcenter.desktop
 	default-no-startup-wizard.diff
 	default-system-fpicker.diff
 	soffice-detect-mozilla-certificates.diff
@@ -184,43 +185,45 @@ build() {
 	 else 	cp -R instsetoo_native/unxlngi6.pro/OpenOffice/native/install/en-US/linux-2.6-intel/buildroot/* ${pkgdir}/
 	fi
 
-	cd ${pkgdir}/opt/
+	# move all to /usr/lib
+	mkdir -p ${pkgdir}/usr/lib
+	mv ${pkgdir}/opt/* ${pkgdir}/usr/lib/
+	rmdir ${pkgdir}/opt
+	
         ## Step 1 
-        cd ${pkgdir}/opt/openoffice.org || return 1
+        cd ${pkgdir}/usr/lib/openoffice.org || return 1
         mv ure/ basis3.1/ || return 1
         cd basis3.1 || return 1
         rm ure-link && mv ure ure-link || return 1
         ## Step 2
-        cd ${pkgdir}/opt/ || return 1
+        cd ${pkgdir}/usr/lib/ || return 1
         mv openoffice.org/basis3.1/ openoffice.org3/ || return 1
         cd openoffice.org3/ || return 1
         rm basis-link && mv basis3.1 basis-link || return 1
         ## Step 3        
-        cd ${pkgdir}/opt/ || return 1
-        rmdir ${pkgdir}/opt/openoffice.org || return 1
+        cd ${pkgdir}/usr/lib/ || return 1
+        rmdir ${pkgdir}/usr/lib/openoffice.org || return 1
         mv openoffice.org3 openoffice || return 1
+
+	# install all built dictionaries from source tree
+        pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlng?6.pro/bin
+	for i in `ls -1 dict-??.oxt`; do
+	  install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i || return 1
+	done
+	popd
 
 	# prepare filesystem entries
 	mkdir -p ${pkgdir}/usr/{bin,share/applications}
 	mkdir -p ${pkgdir}/usr/share/icons/{hicolor,locolor}
 
-	# make symlinks
-	cd ${pkgdir}/usr/bin
-	ln -s ../../opt/openoffice/program/soffice soffice
-	ln -s ../../opt/openoffice/program/spadmin spadmin
-
-	# install all built dictionaries from source tree
-        pushd ${srcdir}/${_OO_milestone}/dictionaries/unxlng?6.pro/bin
-	for i in `ls -1 dict-??.oxt`; do
-	  install -D -m644 $i ${pkgdir}/opt/openoffice/share/extension/install/$i || return 1
-	done
-	popd
-
 	# install shortcuts
-	mv ${pkgdir}/opt/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+	mv ${pkgdir}/usr/lib/openoffice/share/xdg/*.desktop  ${pkgdir}/usr/share/applications
+	# add startcenter desktop file
+	install -D -m644 ${srcdir}/startcenter.desktop ${pkgdir}/usr/share/applications/startcenter.desktop || return 1
+
 	cd ${pkgdir}/usr/share/applications
-	sed -i -e 's|Exec=openoffice.org3|Exec=/opt/openoffice/program/soffice|g' *.desktop || return 1
-	sed -i -e 's|Exec=/opt/openoffice/program/soffice-printeradmin|Exec=/opt/openoffice/program/spadmin|g' printeradmin.desktop || return 1
+	sed -i -e 's|Exec=openoffice.org3|Exec=/usr/bin/soffice|g' *.desktop || return 1
+	sed -i -e 's|Exec=/usr/bin/soffice-printeradmin|Exec=/usr/bin/spadmin|g' printeradmin.desktop || return 1
 	# fix exec commands in shortcuts for Xfce menu
 	sed -i -e 's|base %U|base|g' base.desktop || return 1
 	sed -i -e 's|calc %U|calc|g' calc.desktop || return 1
@@ -230,10 +233,8 @@ build() {
 	sed -i -e 's|writer %U|writer|g' writer.desktop || return 1
 	# remove quickstarter, we disabled it above
 	rm -rf ${pkgdir}/usr/share/applications/qstart.desktop
-	# fix icons in shortcuts
+	# fix icons in desktop files
 	sed -i -e 's|Icon=openofficeorg3-|Icon=|g' *.desktop
-	# add template desktop file
-	install -D -m644 ${srcdir}/template.desktop ${pkgdir}/usr/share/applications/template.desktop || return 1
 
 	# install icons
 	cd ${srcdir}/${_OO_milestone}/sysui/desktop/icons
@@ -248,17 +249,20 @@ build() {
 	chown root.root -R ${pkgdir}/
 	chmod +rX -R ${pkgdir}/usr
 
+
 	## Develize it for BETA!
-	cd ${pkgdir}/opt/
+	cd ${pkgdir}/usr/lib/
 	mv openoffice openoffice-beta
-	sed -i -e 's|Exec=/opt/openoffice/program|Exec=/opt/openoffice-beta/program|g' ${pkgdir}/usr/share/applications/*.desktop
+
+	sed -i -e 's|Exec=/usr/bin/soffice|Exec=/usr/bin/soffice-beta|g' ${pkgdir}/usr/share/applications/*.desktop
+	sed -i -e 's|Exec=/usr/bin/spadmin|Exec=/usr/bin/spadmin-beta|g' ${pkgdir}/usr/share/applications/printeradmin.desktop
 
 	cd ${pkgdir}/usr/bin
 	rm -f soffice spadmin
-	ln -sf ../../opt/openoffice-beta/program/soffice soffice-beta
-	ln -sf ../../opt/openoffice-beta/program/spadmin spadmin-beta
-	cd ${pkgdir}/usr/share/applications/
+	ln -sf /usr/lib/openoffice-beta/program/soffice soffice-beta
+	ln -sf /usr/lib/openoffice-beta/program/spadmin spadmin-beta
 
+	cd ${pkgdir}/usr/share/applications/
 	for desktopz in *.desktop
 	   do mv $desktopz Beta-$desktopz
 	done
@@ -267,11 +271,10 @@ build() {
 	
 	cd ${pkgdir}/usr/share/applications/
 	sed -i -e 's|Icon=|Icon=beta-|g' ${pkgdir}/usr/share/applications/*.desktop
-	sed -i -e 's|OpenOffice\.org\ 3\.1|OpenOffice\.org\ beta|g' ${pkgdir}/usr/share/applications/*.desktop
-	sed -i -e 's|\/opt\/openoffice\-beta\/program\/soffice|\/usr\/bin\/soffice\-beta|g' ${pkgdir}/usr/share/applications/*.desktop
+	sed -i -e 's|OpenOffice\.org\ 3\.1|OpenOffice\.org\ Beta|g' ${pkgdir}/usr/share/applications/*.desktop
 
-	cd ${pkgdir}/opt/openoffice-beta/program/
-	ln -sf /opt/openoffice-beta/program/soffice.bin soffice-beta.bin
+	cd ${pkgdir}/usr/lib/openoffice-beta/program/
+	ln -sf /usr/lib/openoffice-beta/program/soffice.bin soffice-beta.bin
 
 	# set desktop variable to force gtk/gnome vcl usage
 	install -m755 -d ${pkgdir}/etc/profile.d
@@ -280,6 +283,6 @@ build() {
 	# link the mozilla-plugin
 	mkdir -p ${pkgdir}/usr/lib/mozilla/plugins/
 	cd ${pkgdir}/usr/lib/mozilla/plugins/
-	ln -v -s /opt/openoffice-beta/program/libnpsoplugin.so .
+	ln -v -s /usr/lib/openoffice-beta/program/libnpsoplugin.so .
 	mv ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin.so ${pkgdir}/usr/lib/mozilla/plugins/libnpsoplugin-beta.so
 }
