@@ -6,7 +6,7 @@ update-desktop-database -q
 echo " * relogin or source /etc/profile.d/openoffice-beta.sh"
 echo " * see http://wiki.archlinux.org/index.php/Openoffice"
 echo "   how to use extensions, e.g. for spell checking"
-echo "   see /opt/openoffice-beta/share/extension/install what"
+echo "   see /usr/lib/openoffice-beta/share/extension/install what"
 echo "   is shipped with this package"
 echo " * make sure you have installed a ttf font (ttf-dejavu recommended)"
 }
@@ -21,6 +21,6 @@ gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 
 # make sure everything is gone, maybe someone has installed
 # extensions for all users using unopkg --shared
-rm -rf /opt/openoffice-beta
+rm -rf /usr/lib/openoffice-beta
 }
 
